# email-rs

./: Cargo.toml
src/: canonicalization.rs  dkim.rs  email.rs  header.rs  lib.rs  string_tools.rs
src/tests/: email.rs.bak  gmail_cn.eml  how to include the sender's email address in the email body_ (1).eml  how to include the sender's email address in the email body_.eml  mod.rs  parser.rs  test_email.eml
